--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -11,15 +11,18 @@
   left: 0;
   right: 0;
   background: #fff;
-  padding: 50rpx 30rpx 20rpx 30rpx;
+  // padding: 50rpx 30rpx 20rpx 30rpx;
+  padding: 50rpx 0 20rpx 0;
   z-index: 9999;
 }
 .pf-titleTwo{
   img{
     width: 20rpx;
     position: absolute;
-    left: 20rpx;
+    // left: 20rpx;
+    left: 0;
     bottom: 30rpx;
+    padding: 0 30rpx;
   }
 }
 .pf-titleThree{
@@ -29,7 +32,8 @@
   img{
     width: 20rpx;
     height: 36rpx;
-    margin-right: 30rpx;
+    // margin-right: 30rpx;
+    padding: 0 30rpx;
   }
   .pf-imgRig{
     width: 38rpx;
@@ -38,7 +42,8 @@
   .pf-text{
     font-size: 30rpx;
     color: #3B86F7;
-    margin-left: 30rpx;
+    // margin-left: 30rpx;
+    padding: 0 30rpx;
   }
   .gencies-item{
     flex-grow:1;
