--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -12,7 +12,12 @@
   right: 0;
   background: #fff;
   // padding: 50rpx 30rpx 20rpx 30rpx;
-  padding: 50rpx 0 20rpx 0;
+  // padding: 50rpx 0 20rpx 0;
+  padding-top: 50rpx;
+  padding-top: constant(safe-area-inset-top);   //为导航栏+状态栏的高度 88px            
+  padding-left: constant(safe-area-inset-left);   //如果未竖屏时为0                
+  padding-right: constant(safe-area-inset-right); //如果未竖屏时为0  
+  padding-bottom: 20rpx;   
   z-index: 9999;
 }
 .pf-titleTwo{
@@ -328,7 +333,12 @@
 
 //保存、删除按钮
 .contract-button{
-  padding: 0 65rpx;
+  // padding: 0 65rpx;
+  padding-left: 65rpx;
+  padding-right: 65rpx;
+  padding-bottom: 0;
+  padding-bottom: constant(safe-area-inset-bottom);  
+  padding-bottom: env(safe-area-inset-bottom);  
   uni-button{
     border-radius: 50rpx;
     margin-top: 50rpx;
