--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -7,9 +7,9 @@
   font-size: 36rpx;
   color: #333333;
   position: fixed;
-  top: 0;
-  top: constant(safe-area-inset-top);
-  top: env(safe-area-inset-top);
+  // top: 0;
+  // top: constant(safe-area-inset-top);
+  // top: env(safe-area-inset-top);
   left: 0;
   right: 0;
   background: #fff;
@@ -83,9 +83,7 @@
 //头部两个固定定位时
 .pf-poifixed{
   position: fixed;
-  top: 0;
-  top: constant(safe-area-inset-top);
-  top: env(safe-area-inset-top);
+  // top: 0;
   left: 0;
   right: 0;
   .pf-title{
