--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -7,9 +7,9 @@
   font-size: 36rpx;
   color: #333333;
   position: fixed;
-  // top: 0;
-  // top: constant(safe-area-inset-top);
-  // top: env(safe-area-inset-top);
+  top: 0;
+  top: constant(safe-area-inset-top);
+  top: env(safe-area-inset-top);
   left: 0;
   right: 0;
   background: #fff;
@@ -88,6 +88,7 @@
   right: 0;
   .pf-title{
     position: relative;
+    top: 0;
   }
   .appro-fix{
     background-color: #fff;
