--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -13,7 +13,8 @@
   left: 0;
   right: 0;
   background: #fff;
-  padding: 50rpx 0 20rpx 0;
+  // padding: 50rpx 0 20rpx 0;
+  padding-bottom: 20rpx;
   padding-top: 50rpx;
   padding-top: constant(safe-area-inset-top);
   padding-top: env(safe-area-inset-top);
