--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -13,11 +13,11 @@
   left: 0;
   right: 0;
   background: #fff;
-  // padding: 50rpx 0 20rpx 0;
-  padding-bottom: 20rpx;
-  padding-top: 50rpx;
-  padding-top: constant(safe-area-inset-top);
-  padding-top: env(safe-area-inset-top);
+  padding: 50rpx 0 20rpx 0;
+  // padding-bottom: 20rpx;
+  // padding-top: 50rpx;
+  // padding-top: constant(safe-area-inset-top);
+  // padding-top: env(safe-area-inset-top);
   z-index: 9999;
   overflow: hidden;
 }
