--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -7,17 +7,13 @@
   font-size: 36rpx;
   color: #333333;
   position: fixed;
-  // top: 0;
-  // top: constant(safe-area-inset-top);
-  // top: env(safe-area-inset-top);
+  top: 0;
+  top: constant(safe-area-inset-top);
+  top: env(safe-area-inset-top);
   left: 0;
   right: 0;
   background: #fff;
   padding: 50rpx 0 20rpx 0;
-  // padding-bottom: 20rpx;
-  // padding-top: 50rpx;
-  // padding-top: constant(safe-area-inset-top);
-  // padding-top: env(safe-area-inset-top);
   z-index: 9999;
   overflow: hidden;
 }
@@ -25,10 +21,10 @@
   img{
     width: 20rpx;
     position: absolute;
-    top: 24rpx;
+    top: 40rpx;
     left: 0;
     bottom: 30rpx;
-    padding: 20px 30rpx;
+    padding: 20rpx 30rpx;
   }
 }
 .pf-titleThree{
