--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -8,12 +8,14 @@
   color: #333333;
   position: fixed;
   top: 0;
-  top: constant(safe-area-inset-top);
-  top: env(safe-area-inset-top);
   left: 0;
   right: 0;
   background: #fff;
-  padding: 50rpx 0 20rpx 0;
+  // padding: 50rpx 0 20rpx 0;
+  padding-top: 50rpx;
+  padding-top: constant(safe-area-inset-top);
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: 20rpx;
   z-index: 9999;
   overflow: hidden;
 }
@@ -86,11 +88,9 @@
   left: 0;
   right: 0;
   top: 0;
-  top: constant(safe-area-inset-top);
-  top: env(safe-area-inset-top);
+  z-index: 9;
   .pf-title{
     position: relative;
-    top: 0;
   }
   .appro-fix{
     background-color: #fff;
@@ -99,6 +99,24 @@
     .appro-tab{
       border-bottom: none;
       padding: 0;
+    }
+  }
+  //担保人、共借人等进度条展示
+  .household-progress{
+    width: 100%;
+    height: 140rpx;
+    padding-top: 60rpx;
+    background: #ffffff;
+    text-align: center;
+    img{
+      width: 548rpx;
+    }
+    .uni-flex{
+      font-size: 24rpx;
+      color: #999999;
+      .active{
+        color: #333435;
+      }
     }
   }
 }
@@ -360,27 +378,5 @@
     border-radius: 50rpx;
     margin-top: 50rpx;
     box-shadow: 0 10rpx 23rpx 0 rgba(59, 134, 247, 0.4);
-  }
-}
-//担保人、共借人等进度条展示
-.household-progress{
-  position: fixed;
-  top: 130rpx;
-  left: 0;
-  z-index: 9;
-  width: 100%;
-  height: 140rpx;
-  padding-top: 60rpx;
-  background: #ffffff;
-  text-align: center;
-  img{
-    width: 548rpx;
-  }
-  .uni-flex{
-    font-size: 24rpx;
-    color: #999999;
-    .active{
-      color: #333435;
-    }
   }
 }
