--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -20,10 +20,13 @@
   overflow: hidden;
 }
 .pf-titleTwo{
+  position: relative;
   img{
     width: 20rpx;
     position: absolute;
     top: 40rpx;
+    top: constant(safe-area-inset-top);
+    top: env(safe-area-inset-top);
     left: 0;
     bottom: 30rpx;
     padding: 20rpx 30rpx;
