--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -7,7 +7,7 @@
   font-size: 36rpx;
   color: #333333;
   position: fixed;
-  top: 0;
+  // top: 0;
   left: 0;
   right: 0;
   background: #fff;
@@ -20,7 +20,6 @@
   overflow: hidden;
 }
 .pf-titleTwo{
-  position: relative;
   img{
     width: 20rpx;
     position: absolute;
@@ -90,7 +89,7 @@
   position: fixed;
   left: 0;
   right: 0;
-  top: 0;
+  // top: 0;
   z-index: 9;
   .pf-title{
     position: relative;
