--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -19,6 +19,9 @@
   z-index: 9999;
   overflow: hidden;
 }
+.pf-title-android{
+  top: auto;
+}
 .pf-titleTwo{
   img{
     width: 20rpx;
@@ -121,6 +124,9 @@
       }
     }
   }
+}
+.pf-poifixed-android{
+  top: auto;
 }
 //顶部
 
