--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -7,7 +7,7 @@
   font-size: 36rpx;
   color: #333333;
   position: fixed;
-  top: 0;
+  // top: 0;
   left: 0;
   right: 0;
   background: #fff;
@@ -19,8 +19,8 @@
   z-index: 9999;
   overflow: hidden;
 }
-.pf-title-android{
-  top: auto;
+.pf-title-ios{
+  top: 0;
 }
 .pf-titleTwo{
   img{
@@ -92,7 +92,7 @@
   position: fixed;
   left: 0;
   right: 0;
-  top: 0;
+  // top: 0;
   z-index: 9;
   .pf-title{
     position: relative;
@@ -125,8 +125,8 @@
     }
   }
 }
-.pf-poifixed-android{
-  top: auto;
+.pf-poifixed-ios{
+  top: 0;
 }
 //顶部
 
