--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -27,11 +27,15 @@
     width: 20rpx;
     position: absolute;
     top: 40rpx;
-    top: constant(safe-area-inset-top);
-    top: env(safe-area-inset-top);
     left: 0;
     bottom: 30rpx;
     padding: 20rpx 30rpx;
+  }
+}
+.pf-titleTwo-ios{
+  img{  
+    top: constant(safe-area-inset-top);
+    top: env(safe-area-inset-top);
   }
 }
 .pf-titleThree{
