--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -93,9 +93,9 @@
 //头部两个固定定位时
 .pf-poifixed{
   position: fixed;
+  top: 0;
   left: 0;
   right: 0;
-  // top: 0;
   z-index: 9;
   .pf-title{
     position: relative;
@@ -128,9 +128,9 @@
     }
   }
 }
-.pf-poifixed-ios{
-  top: 0;
-}
+// .pf-poifixed-ios{
+//   top: 0;
+// }
 //顶部
 
 //带下划线的tab页签
