--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -387,13 +387,15 @@
   // padding: 0 65rpx;
   padding-left: 65rpx;
   padding-right: 65rpx;
-  // padding-bottom: 0;
-  // padding-bottom: constant(safe-area-inset-bottom);  
-  // padding-bottom: env(safe-area-inset-bottom);  
-  padding-bottom: var(--window-bottom);
+  padding-bottom: constant(safe-area-inset-bottom);  
+  padding-bottom: env(safe-area-inset-bottom);
+  // padding-bottom: var(--window-bottom);
   uni-button{
     border-radius: 50rpx;
     margin-top: 50rpx;
     box-shadow: 0 10rpx 23rpx 0 rgba(59, 134, 247, 0.4);
   }
+}
+.contract-button-an{
+  padding-bottom: 70rpx !important;
 }
