--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -73,10 +73,10 @@
       left: 14rpx;
       padding: 0;
     }
-    .imgSearch-ios{
-      top: constant(safe-area-inset-top);
-      top: env(safe-area-inset-top);
-    }
+    // .imgSearch-ios{
+    //   top: constant(safe-area-inset-top);
+    //   top: env(safe-area-inset-top);
+    // }
     .imgCross{
       height: 60rpx;
       position: absolute;
@@ -89,23 +89,23 @@
         margin-right: 0;
       }
     }
-    .imgCross-ios{
-      top: constant(safe-area-inset-top);
-      top: env(safe-area-inset-top);
-    }
+    // .imgCross-ios{
+    //   top: constant(safe-area-inset-top);
+    //   top: env(safe-area-inset-top);
+    // }
   }
 }
   //间隔头部标题
 .pf-content{
   // padding-top: 70rpx;
-  padding-top: calc(var(--window-top) + 30rpx);
+  padding-top: calc(var(--window-top) + 20rpx);
   padding-bottom: calc(var(--window-bottom) + 30rpx);
 }
 .pf-content-ios{
-  padding-top: calc(constant(safe-area-inset-top) + 30rpx);
-  padding-top: calc(env(safe-area-inset-top) + 30rpx);
-  padding-bottom: calc(constant(safe-area-inset-bottom) + 20rpx);
-  padding-bottom: calc(env(safe-area-inset-bottom) + 20rpx);
+  padding-top: calc(constant(safe-area-inset-top) + 20rpx);
+  padding-top: calc(env(safe-area-inset-top) + 20rpx);
+  padding-bottom: calc(constant(safe-area-inset-bottom) + 10rpx);
+  padding-bottom: calc(env(safe-area-inset-bottom) + 10rpx);
 }
 //头部两个固定定位时
 .pf-poifixed{
@@ -408,4 +408,9 @@
 .contract-button-an{
   // padding-bottom: 70rpx !important;
   padding-bottom: var(--window-bottom) !important;
+}
+
+//不出现滚动条
+::-webkit-scrollbar {
+  display: none;
 }
