--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -99,7 +99,7 @@
 .pf-content{
   // padding-top: 70rpx;
   padding-top: calc(var(--window-top) + 20rpx);
-  padding-bottom: calc(var(--window-bottom) + 30rpx);
+  padding-bottom: calc(var(--window-bottom) + 50rpx);
 }
 .pf-content-ios{
   padding-top: calc(constant(safe-area-inset-top) + 20rpx);
@@ -130,7 +130,8 @@
   .household-progress{
     width: 100%;
     height: 140rpx;
-    padding-top: 60rpx;
+    // padding-top: 60rpx;
+    padding-top: 20rpx;
     background: #ffffff;
     text-align: center;
     img{
