--- a/src/static/css/professionwf.less
+++ b/src/static/css/professionwf.less
@@ -388,6 +388,26 @@
       }
     }
   }
+  .contractRadio{
+    uni-radio-group{
+      display: flex;
+      justify-content: flex-end;
+      padding-right: 0;
+      uni-label{
+        display: flex;
+        align-items: center;
+        uni-view{
+          uni-radio{
+            transform: scale(0.7);
+          }
+        }
+        uni-view:last-of-type{
+          margin-left: 0;
+          color: #999999;
+        }
+      }
+    }
+  }
 }
 //担保合同列表 --end
 
