--- a/src/static/css/professionwfIOS.scss
+++ b/src/static/css/professionwfIOS.scss
@@ -10,7 +10,8 @@
   top: 0;
   left: 0;
   right: 0;
-  background: #E89F73;
+  // background: #E89F73;
+  background: #FFFFFF;
   padding-top: constant(safe-area-inset-top);
   padding-top: env(safe-area-inset-top);
   padding-bottom: 20rpx;
@@ -118,32 +119,62 @@
   padding-top: calc(constant(safe-area-inset-top) + 130rpx);
   padding-top: calc(env(safe-area-inset-top) + 130rpx);
 }
-.pf-content160{
-  padding-top: calc(constant(safe-area-inset-top) + 180rpx);
-  padding-top: calc(env(safe-area-inset-top) + 180rpx);
+.pf-content200{
+  padding-top: calc(constant(safe-area-inset-top) + 200rpx);
+  padding-top: calc(env(safe-area-inset-top) + 200rpx);
 }
 
-// 兼容iphoneX 
+// 兼容iphoneX ,xs
 @media only screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3){
-  .pf-title{
-    background-color: rgb(255, 0, 200);
-  }
   .pf-content{
-    padding-top: calc(constant(safe-area-inset-top) + 10rpx);
-    padding-top: calc(env(safe-area-inset-top) + 10rpx);
-    padding-bottom: calc(constant(safe-area-inset-bottom));
-    padding-bottom: calc(env(safe-area-inset-bottom));
+    padding-top: constant(safe-area-inset-top);
+    padding-top: env(safe-area-inset-top);
+    padding-bottom: constant(safe-area-inset-bottom);
+    padding-bottom: env(safe-area-inset-bottom);
   }
   .pf-content130{
-    padding-top: calc(constant(safe-area-inset-top) + 120rpx);
-    padding-top: calc(env(safe-area-inset-top) + 120rpx);
+    padding-top: calc(constant(safe-area-inset-top) + 110rpx);
+    padding-top: calc(env(safe-area-inset-top) + 110rpx);
   }
-  .pf-content160{
+  .pf-content200{
     padding-top: calc(constant(safe-area-inset-top) + 160rpx);
     padding-top: calc(env(safe-area-inset-top) + 160rpx);
   }
 }
-
+ // xr
+ @media only screen and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) {
+  .pf-content{
+    padding-top: constant(safe-area-inset-top);
+    padding-top: env(safe-area-inset-top);
+    padding-bottom: constant(safe-area-inset-bottom);
+    padding-bottom: env(safe-area-inset-bottom);
+  }
+  .pf-content130{
+    padding-top: calc(constant(safe-area-inset-top) + 110rpx);
+    padding-top: calc(env(safe-area-inset-top) + 110rpx);
+  }
+  .pf-content200{
+    padding-top: calc(constant(safe-area-inset-top) + 160rpx);
+    padding-top: calc(env(safe-area-inset-top) + 160rpx);
+  }
+}
+ // xs max
+ @media only screen and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) {
+  .pf-content{
+    padding-top: constant(safe-area-inset-top);
+    padding-top: env(safe-area-inset-top);
+    padding-bottom: constant(safe-area-inset-bottom);
+    padding-bottom: env(safe-area-inset-bottom);
+  }
+  .pf-content130{
+    padding-top: calc(constant(safe-area-inset-top) + 110rpx);
+    padding-top: calc(env(safe-area-inset-top) + 110rpx);
+  }
+  .pf-content200{
+    padding-top: calc(constant(safe-area-inset-top) + 160rpx);
+    padding-top: calc(env(safe-area-inset-top) + 160rpx);
+  }
+}
 // // 兼容iphone4/4s 
 // @media (device-height:480px) and (-webkit-min-device-pixel-ratio:2){
 //   .pf-title{
